--- a/public/styles.css
+++ b/public/styles.css
@@ -14,16 +14,50 @@
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
 }
+.btn{
+    background-color: #1abc9c;
+    color: #fff;
+    border: #1abc9c;
+}
 
+.btn:hover {
+    background-color: #1a8f62;
+    color: #fff;
+    border: #1a8f62;
+}
+
+.btnPlus {
+    background-color: #1abc9c; 
+    border: none; 
+    color: white; 
+    padding: 12px 16px; 
+    font-size: 16px;
+    cursor: pointer; 
+    position:fixed;
+    bottom: 60px;
+    right: 0;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    border-radius: 15%;
+}
+  
+.btnPlus:hover {
+    background-color: #1a8f62;
+}
+  .btnPlus i {
+    transition: none; 
+    color: white !important;
+}
 
 .footer-padding {
 	padding-bottom: 60px;
 }
 
 .footer {
-	position: absolute;
+	position: fixed;
 	text-align: center;
-	bottom: 0;
+	left: 0;
+    bottom: 0;
 	width: 100%;
 	height: 60px;
 	background-color: #1abc9c;
