--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,19 +4,31 @@
 	<h1><%= title %></h1>
 	<p><%= content %></p>
 	<form action="/contact" method="POST">
-		<div>
+		<div class="form-group">
 			<label for="name">Name:</label>
-			<input type="text" id="name" name="name" required />
+			<input class="form-control" type="text" id="name" name="name" required />
 		</div>
-		<div>
+		<div class="form-group">
 			<label for="email">Email:</label>
-			<input type="email" id="email" name="email" required />
+			<input
+				class="form-control"
+				type="email"
+				id="email"
+				name="email"
+				required
+			/>
 		</div>
-		<div>
+		<div class="form-group">
 			<label for="message">Message:</label>
-			<textarea id="message" name="message" required></textarea>
+			<textarea
+				class="form-control"
+				id="message"
+				name="message"
+				rows="10"
+				required
+			></textarea>
 		</div>
-		<button type="submit">Send</button>
+		<button class="btn btn-primary" type="submit">Send</button>
 	</form>
 </div>
 
