--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,11 +8,15 @@
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
 		<link rel="stylesheet" href="/styles.css" />
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
-					<p class="navbar-brand">DAILY JOURNAL</p>
+					<a href="/"><p class="navbar-brand">DAILY JOURNAL</p></a>
 				</div>
 				<ul class="nav navbar-nav navbar-right">
 					<!-- 6 -->
@@ -23,4 +27,5 @@
 			</div>
 		</nav>
 	</head>
-	<body>
+	<body></body>
+</html>
